--- a/html/ejercicio9.html
+++ b/html/ejercicio9.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <title>Ejercicios de JavaScript</title>
 </head>
 <body>
-    
+
+    <div class="ejercicio-2">
+      <h2>Mayúsculas primeras letras</h2>
+      <input type="text" id="string" placeholder="Ingresa un string">
+      <button id="botón-generar">Generar</button>
+      <p id="resultado"></p>
+    </div>
+  </div>
+  <script src="../js/ejercicio9.js"></script>
 </body>
 </html>
