corregido hasta el ejercicio 8

--- a/html/ejercicio8.html
+++ b/html/ejercicio8.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <title>Obtener números pares</title>
+  <title>Números pares</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="contenedor">
-    <h1>Obtener números pares</h1>
-    <div class="matriz">
-      <input type="text" id="matriz" placeholder="Ingresa la matriz">
-    </div>
-    <div class="botón">
-      <button id="botón-generar">Generar</button>
-    </div>
-    <div class="resultado">
-      <p id="resultado-matriz"></p>
-    </div>
+    <h1>Números pares</h1>
+    <input type="text" id="matriz" placeholder="Ingresa la matriz">
+    <button id="botón-generar">Generar</button>
+    <p id="resultado"></p>
   </div>
   <script src="../js/ejercicio8.js"></script>
 </body>
