--- a/html/ejercicio9.html
+++ b/html/ejercicio9.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <title>Ejercicios de JavaScript</title>
+  <title>Mayúsculas primeras letras</title>
 </head>
 <body>
-
-    <div class="ejercicio-2">
-      <h2>Mayúsculas primeras letras</h2>
-      <input type="text" id="string" placeholder="Ingresa un string">
-      <button id="botón-generar">Generar</button>
-      <p id="resultado"></p>
-    </div>
+  <div class="contenedor">
+    <h1>Mayúsculas primeras letras</h1>
+    <input type="text" id="string" placeholder="Ingresa un string">
+    <button id="botón-generar">Generar</button>
+    <p id="resultado"></p>
   </div>
   <script src="../js/ejercicio9.js"></script>
 </body>
 </html>
+
