--- a/html/ejercicio10.html
+++ b/html/ejercicio10.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="contenedor">
-    <h1>Obtener longitudes de strings</h1>
+    <h1>Contar letras de Palabras</h1>
     <div class="matriz">
       <input type="text" id="matriz" placeholder="Ingresa la matriz">
     </div>
