--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./html/ejercicio1.html">Gestión de Inventario</a>
+    
+    <center>
+        <h1>Menu</h1>
+
+        <a href="./html/ejercicio1.html">Gestión de inventario</a> <br>
+        <a href="./html/ejercicio2.html">Generador de tarjetas de Presentación</a>
+        <a href="./html/ejercicio3.html">Generador de Grráfica de barras</a>
+        <a href="./html/ejercicio4.html">Calculadora de hipoteca</a>
+        <a href="./html/ejercicio5.html">Juego "Adivina La Palabra"</a>
+        <a href="./html/ejercicio6.html">Generador de citas aleatorias</a>
+        <a href="./html/ejercicio7.html">Programa de contratos legales</a>
+        <a href="./html/ejercicio8.html">Números Pares</a>
+        <a href="./html/ejercicio9.html">Letras Mayúsculas</a>
+        <a href="./html/ejercicio10.html">Contar letras de Palabras</a>
+    </center>
+  
 </body>
 </html>
