--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 <body>
     
     <center>
-        <h1>Menu</h1>
+        <h1>Menu</h1><br>
 
-        <a href="./html/ejercicio1.html">Gestión de inventario</a> <br>
-        <a href="./html/ejercicio2.html">Generador de tarjetas de Presentación</a>
-        <a href="./html/ejercicio3.html">Generador de Grráfica de barras</a>
-        <a href="./html/ejercicio4.html">Calculadora de hipoteca</a>
-        <a href="./html/ejercicio5.html">Juego "Adivina La Palabra"</a>
-        <a href="./html/ejercicio6.html">Generador de citas aleatorias</a>
-        <a href="./html/ejercicio7.html">Programa de contratos legales</a>
-        <a href="./html/ejercicio8.html">Números Pares</a>
-        <a href="./html/ejercicio9.html">Letras Mayúsculas</a>
-        <a href="./html/ejercicio10.html">Contar letras de Palabras</a>
+        <a href="./html/ejercicio1.html" target="_blank">Gestión de inventario</a> <br><br>
+        <a href="./html/ejercicio2.html" target="_blank">Generador de tarjetas de Presentación</a><br><br>
+        <a href="./html/ejercicio3.html" target="_blank">Generador de Grráfica de barras</a><br><br>
+        <a href="./html/ejercicio4.html" target="_blank">Calculadora de hipoteca</a><br><br>
+        <a href="./html/ejercicio5.html" target="_blank">Juego "Adivina La Palabra"</a><br><br>
+        <a href="./html/ejercicio6.html" target="_blank">Generador de citas aleatorias</a><br><br>
+        <a href="./html/ejercicio7.html" target="_blank">Programa de contratos legales</a><br><br>
+        <a href="./html/ejercicio8.html" target="_blank">Números Pares</a><br><br>
+        <a href="./html/ejercicio9.html" target="_blank">Letras Mayúsculas</a><br><br>
+        <a href="./html/ejercicio10.html" target="_blank">Contar letras de Palabras</a>
     </center>
   
 </body>
